--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A full stack online shopping website",
   "main": "index.js",
   "scripts": {
+    "start": "node api/index.js",
+    "server": "nodemon api/index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "db:seed": "node api/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/DannySantino/cara-online-store/issues"
   },
-  "homepage": "https://github.com/DannySantino/cara-online-store#readme"
+  "homepage": "https://github.com/DannySantino/cara-online-store#readme",
+  "devDependencies": {
+    "concurrently": "^7.0.0"
+  }
 }
