--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "stripe": "^8.208.0"
   }
 }
