--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node api/index.js",
     "server": "nodemon api/index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "admin": "npm start --prefix admin",
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run admin\"",
     "db:seed": "node api/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
