prepare package.json files for deployment

--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "cara-store-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,11 +24,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "author": "Danny Santino",
   "eslintConfig": {
     "extends": [
       "react-app",
